Add animation on dialog
animating dialog show using keyframes

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 
     form.addEventListener('submit', (event) => {
       event.preventDefault();
-      dialog.showModal();
+      dialog.show();
       form.reset();
 
       setInterval(() => {
